# ExercicesC

./: CMakeLists.txt  README.md  exo1.c  exo10.c  exo11.c  exo12.c  exo13.c  exo2.c  exo3.c  exo4.c  exo5.c  exo6.c  exo7.c  exo8.c  exo9.c  exoMemoire.c  main.c
